# CommonBackendUtils

./: CMakeLists.txt
app/: launcher.cpp
benchmark/: arg_parser.hpp  memory_benchmark.cpp
include/Avocado/: backend_defs.h  backend_descriptors.hpp  backend_utils.hpp
include/Avocado/descriptors/: ContextDescriptor.hpp  ConvolutionDescriptor.hpp  DropoutDescriptor.hpp  MemoryDescriptor.hpp  OptimizerDescriptor.hpp  PoolingDescriptor.hpp  TensorDescriptor.hpp
include/Avocado/testing/: ActivationTestData.hpp  AddBiasTestData.hpp  AddScalarTestData.hpp  AddTensorsTestData.hpp  BatchNormTestData.hpp  BinaryOpTestData.hpp  ConcatTestData.hpp  Im2RowTestData.hpp  LossesTestData.hpp  OptimizerTestData.hpp  ReductionTestData.hpp  RegularizerTestData.hpp  ScaleTestData.hpp  SoftmaxTestData.hpp  SplitTestData.hpp  TransposeTestData.hpp  UnaryOpTestData.hpp  WinogradTestData.hpp  utils.hpp  wrappers.hpp
src/: backend_utils.cpp
src/descriptors/: ContextDescriptor.cpp  ConvolutionDescriptor.cpp  DescriptorPool.hpp  DropoutDescriptor.cpp  MemoryDescriptor.cpp  OptimizerDescriptor.cpp  PoolingDescriptor.cpp  TensorDescriptor.cpp
test/testing/: ActivationTestData.cpp  utils.cpp  wrappers.cpp
